[gd_scene load_steps=7 format=4 uid="uid://c4kipgspg5efw"]

[ext_resource type="Script" path="res://scenes/Ui/MapSelectScreen/map_selection_menu.gd" id="1_l2k3a"]
[ext_resource type="TileSet" uid="uid://de0f0aogjq64q" path="res://resources/tilesets/tileset.tres" id="2_khmxq"]
[ext_resource type="PackedScene" uid="uid://bsr284cx0o2lt" path="res://scenes/Ui/vignette.tscn" id="3_kn6jf"]
[ext_resource type="Theme" uid="uid://bmh7oa1jgdg2c" path="res://resources/theme/theme.tres" id="4_is506"]
[ext_resource type="PackedScene" uid="uid://rsawx01ymb4o" path="res://scenes/Ui/MapSelectScreen/map_select_card.tscn" id="5_1t86l"]
[ext_resource type="PackedScene" uid="uid://pg6jic4xnaw1" path="res://scenes/Ui/sound_button.tscn" id="6_ae2ug"]

[node name="MapSelectionMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_l2k3a")

[node name="TileMapBackground" type="TileMapLayer" parent="."]
top_level = true
tile_map_data = PackedByteArray("AAAAAAIAAQACAAEAAAAAAAQAAQACAAEAAAAAAAUAAQACAAEAAAAAAAYAAQACAAEAAAAAAAcAAQACAAEAAAAAAAgAAQACAAEAAAAAAAkAAQACAAEAAAAAAAoAAQACAAEAAAAAAAsAAQACAAEAAAAAAAwAAQACAAEAAAAAAA0AAQACAAEAAAAAAA4AAQACAAEAAAAAAA8AAQACAAEAAAAAABAAAQACAAEAAAAAABEAAQACAAEAAAAAABIAAQACAAEAAAAAABMAAQACAAEAAAAAABQAAQACAAEAAAAAABUAAQACAAEAAAAAABYAAQACAAEAAAABAAIAAQACAAEAAAABAAQAAQACAAEAAAABAAUAAQACAAEAAAABAAYAAQACAAEAAAABAAcAAQACAAEAAAABAAgAAQACAAEAAAABAAkAAQACAAEAAAABAAoAAQACAAEAAAABAAsAAQACAAEAAAABAAwAAQACAAEAAAABAA0AAQACAAEAAAABAA4AAQACAAEAAAABAA8AAQACAAEAAAABABAAAQACAAEAAAABABEAAQACAAEAAAABABIAAQACAAEAAAABABMAAQACAAEAAAABABQAAQACAAEAAAABABUAAQACAAEAAAABABYAAQACAAEAAAACAAIAAQACAAEAAAACAAQAAQACAAEAAAACAAUAAQACAAEAAAACAAYAAQACAAEAAAACAAcAAQACAAEAAAACAAgAAQACAAEAAAACAAkAAQACAAEAAAACAAoAAQACAAEAAAACAAsAAQACAAEAAAACAAwAAQACAAEAAAACAA0AAQACAAEAAAACAA4AAQACAAEAAAACAA8AAQACAAEAAAACABAAAQACAAEAAAACABEAAQACAAEAAAACABIAAQACAAEAAAACABMAAQACAAEAAAACABQAAQACAAEAAAACABUAAQACAAEAAAACABYAAQACAAEAAAADAAIAAQACAAEAAAADAAQAAQACAAEAAAADAAUAAQACAAEAAAADAAYAAQACAAEAAAADAAcAAQACAAEAAAADAAgAAQACAAEAAAADAAkAAQACAAEAAAADAAoAAQACAAEAAAADAAsAAQACAAEAAAADAAwAAQACAAEAAAADAA0AAQACAAEAAAADAA4AAQACAAEAAAADAA8AAQACAAEAAAADABAAAQACAAEAAAADABEAAQACAAEAAAADABIAAQACAAEAAAADABMAAQACAAEAAAADABQAAQACAAEAAAADABUAAQACAAEAAAADABYAAQACAAEAAAAEAAIAAQACAAEAAAAEAAQAAQACAAEAAAAEAAUAAQACAAEAAAAEAAYAAQACAAEAAAAEAAcAAQACAAEAAAAEAAgAAQACAAEAAAAEAAkAAQACAAEAAAAEAAoAAQACAAEAAAAEAAsAAQACAAEAAAAEAAwAAQACAAEAAAAEAA0AAQACAAEAAAAEAA4AAQACAAEAAAAEAA8AAQACAAEAAAAEABAAAQACAAEAAAAEABEAAQACAAEAAAAEABIAAQACAAEAAAAEABMAAQACAAEAAAAEABQAAQACAAEAAAAEABUAAQACAAEAAAAEABYAAQACAAEAAAAFAAIAAQACAAEAAAAFAAQAAQACAAEAAAAFAAUAAQACAAEAAAAFAAYAAQACAAEAAAAFAAcAAQACAAEAAAAFAAgAAQACAAEAAAAFAAkAAQACAAEAAAAFAAoAAQACAAEAAAAFAAsAAQACAAEAAAAFAAwAAQACAAEAAAAFAA0AAQACAAEAAAAFAA4AAQACAAEAAAAFAA8AAQACAAEAAAAFABAAAQACAAEAAAAFABEAAQACAAEAAAAFABIAAQACAAEAAAAFABMAAQACAAEAAAAFABQAAQACAAEAAAAFABUAAQACAAEAAAAFABYAAQACAAEAAAAGAAIAAQACAAEAAAAGAAQAAQACAAEAAAAGAAUAAQACAAEAAAAGAAYAAQACAAEAAAAGAAcAAQACAAEAAAAGAAgAAQACAAEAAAAGAAkAAQACAAEAAAAGAAoAAQACAAEAAAAGAAsAAQACAAEAAAAGAAwAAQACAAEAAAAGAA0AAQACAAEAAAAGAA4AAQACAAEAAAAGAA8AAQACAAEAAAAGABAAAQACAAEAAAAGABEAAQACAAEAAAAGABIAAQACAAEAAAAGABMAAQACAAEAAAAGABQAAQACAAEAAAAGABUAAQACAAEAAAAGABYAAQACAAEAAAAHAAIAAQACAAEAAAAHAAQAAQACAAEAAAAHAAUAAQACAAEAAAAHAAYAAQACAAEAAAAHAAcAAQACAAEAAAAHAAgAAQACAAEAAAAHAAkAAQACAAEAAAAHAAoAAQACAAEAAAAHAAsAAQACAAEAAAAHAAwAAQACAAEAAAAHAA0AAQACAAEAAAAHAA4AAQACAAEAAAAHAA8AAQACAAEAAAAHABAAAQACAAEAAAAHABEAAQACAAEAAAAHABIAAQACAAEAAAAHABMAAQACAAEAAAAHABQAAQACAAEAAAAHABUAAQACAAEAAAAHABYAAQACAAEAAAAIAAIAAQACAAEAAAAIAAQAAQACAAEAAAAIAAUAAQACAAEAAAAIAAYAAQACAAEAAAAIAAcAAQACAAEAAAAIAAgAAQACAAEAAAAIAAkAAQACAAEAAAAIAAoAAQACAAEAAAAIAAsAAQACAAEAAAAIAAwAAQACAAEAAAAIAA0AAQACAAEAAAAIAA4AAQACAAEAAAAIAA8AAQACAAEAAAAIABAAAQACAAEAAAAIABEAAQACAAEAAAAIABIAAQACAAEAAAAIABMAAQACAAEAAAAIABQAAQACAAEAAAAIABUAAQACAAEAAAAIABYAAQACAAEAAAAJAAIAAQACAAEAAAAJAAMAAQACAAEAAAAJAAQAAQACAAEAAAAJAAUAAQACAAEAAAAJAAYAAQACAAEAAAAJAAcAAQACAAEAAAAJAAgAAQACAAEAAAAJAAkAAQACAAEAAAAJAAoAAQACAAEAAAAJAAsAAQACAAEAAAAJAAwAAQACAAEAAAAJAA0AAQACAAEAAAAJAA4AAQACAAEAAAAJAA8AAQACAAEAAAAJABAAAQACAAEAAAAJABEAAQACAAEAAAAJABIAAQACAAEAAAAJABMAAQACAAEAAAAJABQAAQACAAEAAAAJABUAAQACAAEAAAAJABYAAQACAAEAAAAKAAIAAQACAAEAAAAKAAMAAQACAAEAAAAKAAQAAQACAAEAAAAKAAUAAQACAAEAAAAKAAYAAQACAAEAAAAKAAcAAQACAAEAAAAKAAgAAQACAAEAAAAKAAkAAQACAAEAAAAKAAoAAQACAAEAAAAKAAsAAQACAAEAAAAKAAwAAQACAAEAAAAKAA0AAQACAAEAAAAKAA4AAQACAAEAAAAKAA8AAQACAAEAAAAKABAAAQACAAEAAAAKABEAAQACAAEAAAAKABIAAQACAAEAAAAKABMAAQACAAEAAAAKABQAAQACAAEAAAAKABUAAQACAAEAAAAKABYAAQACAAEAAAALAAIAAQACAAEAAAALAAMAAQACAAEAAAALAAQAAQACAAEAAAALAAUAAQACAAEAAAALAAYAAQACAAEAAAALAAcAAQACAAEAAAALAAgAAQACAAEAAAALAAkAAQACAAEAAAALAAoAAQACAAEAAAALAAsAAQACAAEAAAALAAwAAQACAAEAAAALAA0AAQACAAEAAAALAA4AAQACAAEAAAALAA8AAQACAAEAAAALABAAAQACAAEAAAALABEAAQACAAEAAAALABIAAQACAAEAAAALABMAAQACAAEAAAALABQAAQACAAEAAAALABUAAQACAAEAAAALABYAAQACAAEAAAAMAAIAAQACAAEAAAAMAAMAAQACAAEAAAAMAAQAAQACAAEAAAAMAAUAAQACAAEAAAAMAAYAAQACAAEAAAAMAAcAAQACAAEAAAAMAAgAAQACAAEAAAAMAAkAAQACAAEAAAAMAAoAAQACAAEAAAAMAAsAAQACAAEAAAAMAAwAAQACAAEAAAAMAA0AAQACAAEAAAAMAA4AAQACAAEAAAAMAA8AAQACAAEAAAAMABAAAQACAAEAAAAMABEAAQACAAEAAAAMABIAAQACAAEAAAAMABMAAQACAAEAAAAMABQAAQACAAEAAAAMABUAAQACAAEAAAAMABYAAQACAAEAAAANAAIAAQACAAEAAAANAAMAAQACAAEAAAANAAQAAQACAAEAAAANAAUAAQACAAEAAAANAAYAAQACAAEAAAANAAcAAQACAAEAAAANAAgAAQACAAEAAAANAAkAAQACAAEAAAANAAoAAQACAAEAAAANAAsAAQACAAEAAAANAAwAAQACAAEAAAANAA0AAQACAAEAAAANAA4AAQACAAEAAAANAA8AAQACAAEAAAANABAAAQACAAEAAAANABEAAQACAAEAAAANABIAAQACAAEAAAANABMAAQACAAEAAAANABQAAQACAAEAAAANABUAAQACAAEAAAANABYAAQACAAEAAAAOAAIAAQACAAEAAAAOAAMAAQACAAEAAAAOAAQAAQACAAEAAAAOAAUAAQACAAEAAAAOAAYAAQACAAEAAAAOAAcAAQACAAEAAAAOAAgAAQACAAEAAAAOAAkAAQACAAEAAAAOAAoAAQACAAEAAAAOAAsAAQACAAEAAAAOAAwAAQACAAEAAAAOAA0AAQACAAEAAAAOAA4AAQACAAEAAAAOAA8AAQACAAEAAAAOABAAAQACAAEAAAAOABEAAQACAAEAAAAOABIAAQACAAEAAAAOABMAAQACAAEAAAAOABQAAQACAAEAAAAOABUAAQACAAEAAAAOABYAAQACAAEAAAAPAAIAAQACAAEAAAAPAAMAAQACAAEAAAAPAAQAAQACAAEAAAAPAAUAAQACAAEAAAAPAAYAAQACAAEAAAAPAAcAAQACAAEAAAAPAAgAAQACAAEAAAAPAAkAAQACAAEAAAAPAAoAAQACAAEAAAAPAAsAAQACAAEAAAAPAAwAAQACAAEAAAAPAA0AAQACAAEAAAAPAA4AAQACAAEAAAAPAA8AAQACAAEAAAAPABAAAQACAAEAAAAPABEAAQACAAEAAAAPABIAAQACAAEAAAAPABMAAQACAAEAAAAPABQAAQACAAEAAAAPABUAAQACAAEAAAAPABYAAQACAAEAAAAQAAIAAQACAAEAAAAQAAMAAQACAAEAAAAQAAQAAQACAAEAAAAQAAUAAQACAAEAAAAQAAYAAQACAAEAAAAQAAcAAQACAAEAAAAQAAgAAQACAAEAAAAQAAkAAQACAAEAAAAQAAoAAQACAAEAAAAQAAsAAQACAAEAAAAQAAwAAQACAAEAAAAQAA0AAQACAAEAAAAQAA4AAQACAAEAAAAQAA8AAQACAAEAAAAQABAAAQACAAEAAAAQABEAAQACAAEAAAAQABIAAQACAAEAAAAQABMAAQACAAEAAAAQABQAAQACAAEAAAAQABUAAQACAAEAAAAQABYAAQACAAEAAAARAAIAAQACAAEAAAARAAMAAQACAAEAAAARAAQAAQACAAEAAAARAAUAAQACAAEAAAARAAYAAQACAAEAAAARAAcAAQACAAEAAAARAAgAAQACAAEAAAARAAkAAQACAAEAAAARAAoAAQACAAEAAAARAAsAAQACAAEAAAARAAwAAQACAAEAAAARAA0AAQACAAEAAAARAA4AAQACAAEAAAARAA8AAQACAAEAAAARABAAAQACAAEAAAARABEAAQACAAEAAAARABIAAQACAAEAAAARABMAAQACAAEAAAARABQAAQACAAEAAAARABUAAQACAAEAAAARABYAAQACAAEAAAASAAIAAQACAAEAAAASAAMAAQACAAEAAAASAAQAAQACAAEAAAASAAUAAQACAAEAAAASAAYAAQACAAEAAAASAAcAAQACAAEAAAASAAgAAQACAAEAAAASAAkAAQACAAEAAAASAAoAAQACAAEAAAASAAsAAQACAAEAAAASAAwAAQACAAEAAAASAA0AAQACAAEAAAASAA4AAQACAAEAAAASAA8AAQACAAEAAAASABAAAQACAAEAAAASABEAAQACAAEAAAASABIAAQACAAEAAAASABMAAQACAAEAAAASABQAAQACAAEAAAASABUAAQACAAEAAAASABYAAQACAAEAAAATAAIAAQACAAEAAAATAAMAAQACAAEAAAATAAQAAQACAAEAAAATAAUAAQACAAEAAAATAAYAAQACAAEAAAATAAcAAQACAAEAAAATAAgAAQACAAEAAAATAAkAAQACAAEAAAATAAoAAQACAAEAAAATAAsAAQACAAEAAAATAAwAAQACAAEAAAATAA0AAQACAAEAAAATAA4AAQACAAEAAAATAA8AAQACAAEAAAATABAAAQACAAEAAAATABEAAQACAAEAAAATABIAAQACAAEAAAATABMAAQACAAEAAAATABQAAQACAAEAAAATABUAAQACAAEAAAATABYAAQACAAEAAAAUAAIAAQACAAEAAAAUAAMAAQACAAEAAAAUAAQAAQACAAEAAAAUAAUAAQACAAEAAAAUAAYAAQACAAEAAAAUAAcAAQACAAEAAAAUAAgAAQACAAEAAAAUAAkAAQACAAEAAAAUAAoAAQACAAEAAAAUAAsAAQACAAEAAAAUAAwAAQACAAEAAAAUAA0AAQACAAEAAAAUAA4AAQACAAEAAAAUAA8AAQACAAEAAAAUABAAAQACAAEAAAAUABEAAQACAAEAAAAUABIAAQACAAEAAAAUABMAAQACAAEAAAAUABQAAQACAAEAAAAUABUAAQACAAEAAAAUABYAAQACAAEAAAAVAAIAAQACAAEAAAAVAAMAAQACAAEAAAAVAAQAAQACAAEAAAAVAAUAAQACAAEAAAAVAAYAAQACAAEAAAAVAAcAAQACAAEAAAAVAAgAAQACAAEAAAAVAAkAAQACAAEAAAAVAAoAAQACAAEAAAAVAAsAAQACAAEAAAAVAAwAAQACAAEAAAAVAA0AAQACAAEAAAAVAA4AAQACAAEAAAAVAA8AAQACAAEAAAAVABAAAQACAAEAAAAVABEAAQACAAEAAAAVABIAAQACAAEAAAAVABMAAQACAAEAAAAVABQAAQACAAEAAAAVABUAAQACAAEAAAAVABYAAQACAAEAAAAWAAIAAQACAAEAAAAWAAMAAQACAAEAAAAWAAQAAQACAAEAAAAWAAUAAQACAAEAAAAWAAYAAQACAAEAAAAWAAcAAQACAAEAAAAWAAgAAQACAAEAAAAWAAkAAQACAAEAAAAWAAoAAQACAAEAAAAWAAsAAQACAAEAAAAWAAwAAQACAAEAAAAWAA0AAQACAAEAAAAWAA4AAQACAAEAAAAWAA8AAQACAAEAAAAWABAAAQACAAEAAAAWABEAAQACAAEAAAAWABIAAQACAAEAAAAWABMAAQACAAEAAAAWABQAAQACAAEAAAAWABUAAQACAAEAAAAWABYAAQACAAEAAAAXAAIAAQACAAEAAAAXAAMAAQACAAEAAAAXAAQAAQACAAEAAAAXAAUAAQACAAEAAAAXAAYAAQACAAEAAAAXAAcAAQACAAEAAAAXAAgAAQACAAEAAAAXAAkAAQACAAEAAAAXAAoAAQACAAEAAAAXAAsAAQACAAEAAAAXAAwAAQACAAEAAAAXAA0AAQACAAEAAAAXAA4AAQACAAEAAAAXAA8AAQACAAEAAAAXABAAAQACAAEAAAAXABEAAQACAAEAAAAXABIAAQACAAEAAAAXABMAAQACAAEAAAAXABQAAQACAAEAAAAXABUAAQACAAEAAAAXABYAAQACAAEAAAAYAAIAAQACAAEAAAAYAAMAAQACAAEAAAAYAAQAAQACAAEAAAAYAAUAAQACAAEAAAAYAAYAAQACAAEAAAAYAAcAAQACAAEAAAAYAAgAAQACAAEAAAAYAAkAAQACAAEAAAAYAAoAAQACAAEAAAAYAAsAAQACAAEAAAAYAAwAAQACAAEAAAAYAA0AAQACAAEAAAAYAA4AAQACAAEAAAAYAA8AAQACAAEAAAAYABAAAQACAAEAAAAYABEAAQACAAEAAAAYABIAAQACAAEAAAAYABMAAQACAAEAAAAYABQAAQACAAEAAAAYABUAAQACAAEAAAAYABYAAQACAAEAAAAZAAIAAQACAAEAAAAZAAMAAQACAAEAAAAZAAQAAQACAAEAAAAZAAUAAQACAAEAAAAZAAYAAQACAAEAAAAZAAcAAQACAAEAAAAZAAgAAQACAAEAAAAZAAkAAQACAAEAAAAZAAoAAQACAAEAAAAZAAsAAQACAAEAAAAZAAwAAQACAAEAAAAZAA0AAQACAAEAAAAZAA4AAQACAAEAAAAZAA8AAQACAAEAAAAZABAAAQACAAEAAAAZABEAAQACAAEAAAAZABIAAQACAAEAAAAZABMAAQACAAEAAAAZABQAAQACAAEAAAAZABUAAQACAAEAAAAZABYAAQACAAEAAAAaAAIAAQACAAEAAAAaAAMAAQACAAEAAAAaAAQAAQACAAEAAAAaAAUAAQACAAEAAAAaAAYAAQACAAEAAAAaAAcAAQACAAEAAAAaAAgAAQACAAEAAAAaAAkAAQACAAEAAAAaAAoAAQACAAEAAAAaAAsAAQACAAEAAAAaAAwAAQACAAEAAAAaAA0AAQACAAEAAAAaAA4AAQACAAEAAAAaAA8AAQACAAEAAAAaABAAAQACAAEAAAAaABEAAQACAAEAAAAaABIAAQACAAEAAAAaABMAAQACAAEAAAAaABQAAQACAAEAAAAaABUAAQACAAEAAAAaABYAAQACAAEAAAAbAAIAAQACAAEAAAAbAAMAAQACAAEAAAAbAAQAAQACAAEAAAAbAAUAAQACAAEAAAAbAAYAAQACAAEAAAAbAAcAAQACAAEAAAAbAAgAAQACAAEAAAAbAAkAAQACAAEAAAAbAAoAAQACAAEAAAAbAAsAAQACAAEAAAAbAAwAAQACAAEAAAAbAA0AAQACAAEAAAAbAA4AAQACAAEAAAAbAA8AAQACAAEAAAAbABAAAQACAAEAAAAbABEAAQACAAEAAAAbABIAAQACAAEAAAAbABMAAQACAAEAAAAbABQAAQACAAEAAAAbABUAAQACAAEAAAAbABYAAQACAAEAAAAcAAIAAQACAAEAAAAcAAMAAQACAAEAAAAcAAQAAQACAAEAAAAcAAUAAQACAAEAAAAcAAYAAQACAAEAAAAcAAcAAQACAAEAAAAcAAgAAQACAAEAAAAcAAkAAQACAAEAAAAcAAoAAQACAAEAAAAcAAsAAQACAAEAAAAcAAwAAQACAAEAAAAcAA0AAQACAAEAAAAcAA4AAQACAAEAAAAcAA8AAQACAAEAAAAcABAAAQACAAEAAAAcABEAAQACAAEAAAAcABIAAQACAAEAAAAcABMAAQACAAEAAAAcABQAAQACAAEAAAAcABUAAQACAAEAAAAcABYAAQACAAEAAAAdAAIAAQACAAEAAAAdAAMAAQACAAEAAAAdAAQAAQACAAEAAAAdAAUAAQACAAEAAAAdAAYAAQACAAEAAAAdAAcAAQACAAEAAAAdAAgAAQACAAEAAAAdAAkAAQACAAEAAAAdAAoAAQACAAEAAAAdAAsAAQACAAEAAAAdAAwAAQACAAEAAAAdAA0AAQACAAEAAAAdAA4AAQACAAEAAAAdAA8AAQACAAEAAAAdABAAAQACAAEAAAAdABEAAQACAAEAAAAdABIAAQACAAEAAAAdABMAAQACAAEAAAAdABQAAQACAAEAAAAdABUAAQACAAEAAAAdABYAAQACAAEAAAAeAAIAAQACAAEAAAAeAAMAAQACAAEAAAAeAAQAAQACAAEAAAAeAAUAAQACAAEAAAAeAAYAAQACAAEAAAAeAAcAAQACAAEAAAAeAAgAAQACAAEAAAAeAAkAAQACAAEAAAAeAAoAAQACAAEAAAAeAAsAAQACAAEAAAAeAAwAAQACAAEAAAAeAA0AAQACAAEAAAAeAA4AAQACAAEAAAAeAA8AAQACAAEAAAAeABAAAQACAAEAAAAeABEAAQACAAEAAAAeABIAAQACAAEAAAAeABMAAQACAAEAAAAeABQAAQACAAEAAAAeABUAAQACAAEAAAAeABYAAQACAAEAAAAfAAIAAQACAAEAAAAfAAMAAQACAAEAAAAfAAQAAQACAAEAAAAfAAUAAQACAAEAAAAfAAYAAQACAAEAAAAfAAcAAQACAAEAAAAfAAgAAQACAAEAAAAfAAkAAQACAAEAAAAfAAoAAQACAAEAAAAfAAsAAQACAAEAAAAfAAwAAQACAAEAAAAfAA0AAQACAAEAAAAfAA4AAQACAAEAAAAfAA8AAQACAAEAAAAfABAAAQACAAEAAAAfABEAAQACAAEAAAAfABIAAQACAAEAAAAfABMAAQACAAEAAAAfABQAAQACAAEAAAAfABUAAQACAAEAAAAfABYAAQACAAEAAAAgAAIAAQACAAEAAAAgAAMAAQACAAEAAAAgAAQAAQACAAEAAAAgAAUAAQACAAEAAAAgAAYAAQACAAEAAAAgAAcAAQACAAEAAAAgAAgAAQACAAEAAAAgAAkAAQACAAEAAAAgAAoAAQACAAEAAAAgAAsAAQACAAEAAAAgAAwAAQACAAEAAAAgAA0AAQACAAEAAAAgAA4AAQACAAEAAAAgAA8AAQACAAEAAAAgABAAAQACAAEAAAAgABEAAQACAAEAAAAgABIAAQACAAEAAAAgABMAAQACAAEAAAAgABQAAQACAAEAAAAgABUAAQACAAEAAAAgABYAAQACAAEAAAAhAAIAAQACAAEAAAAhAAMAAQACAAEAAAAhAAQAAQACAAEAAAAhAAUAAQACAAEAAAAhAAYAAQACAAEAAAAhAAcAAQACAAEAAAAhAAgAAQACAAEAAAAhAAkAAQACAAEAAAAhAAoAAQACAAEAAAAhAAsAAQACAAEAAAAhAAwAAQACAAEAAAAhAA0AAQACAAEAAAAhAA4AAQACAAEAAAAhAA8AAQACAAEAAAAhABAAAQACAAEAAAAhABEAAQACAAEAAAAhABIAAQACAAEAAAAhABMAAQACAAEAAAAhABQAAQACAAEAAAAhABUAAQACAAEAAAAhABYAAQACAAEAAAAiAAIAAQACAAEAAAAiAAMAAQACAAEAAAAiAAQAAQACAAEAAAAiAAUAAQACAAEAAAAiAAYAAQACAAEAAAAiAAcAAQACAAEAAAAiAAgAAQACAAEAAAAiAAkAAQACAAEAAAAiAAoAAQACAAEAAAAiAAsAAQACAAEAAAAiAAwAAQACAAEAAAAiAA0AAQACAAEAAAAiAA4AAQACAAEAAAAiAA8AAQACAAEAAAAiABAAAQACAAEAAAAiABEAAQACAAEAAAAiABIAAQACAAEAAAAiABMAAQACAAEAAAAiABQAAQACAAEAAAAiABUAAQACAAEAAAAiABYAAQACAAEAAAAjAAIAAQACAAEAAAAjAAMAAQACAAEAAAAjAAQAAQACAAEAAAAjAAUAAQACAAEAAAAjAAYAAQACAAEAAAAjAAcAAQACAAEAAAAjAAgAAQACAAEAAAAjAAkAAQACAAEAAAAjAAoAAQACAAEAAAAjAAsAAQACAAEAAAAjAAwAAQACAAEAAAAjAA0AAQACAAEAAAAjAA4AAQACAAEAAAAjAA8AAQACAAEAAAAjABAAAQACAAEAAAAjABEAAQACAAEAAAAjABIAAQACAAEAAAAjABMAAQACAAEAAAAjABQAAQACAAEAAAAjABUAAQACAAEAAAAjABYAAQACAAEAAAAkAAIAAQACAAEAAAAkAAMAAQACAAEAAAAkAAQAAQACAAEAAAAkAAUAAQACAAEAAAAkAAYAAQACAAEAAAAkAAcAAQACAAEAAAAkAAgAAQACAAEAAAAkAAkAAQACAAEAAAAkAAoAAQACAAEAAAAkAAsAAQACAAEAAAAkAAwAAQACAAEAAAAkAA0AAQACAAEAAAAkAA4AAQACAAEAAAAkAA8AAQACAAEAAAAkABAAAQACAAEAAAAkABEAAQACAAEAAAAkABIAAQACAAEAAAAkABMAAQACAAEAAAAkABQAAQACAAEAAAAkABUAAQACAAEAAAAkABYAAQACAAEAAAAlAAIAAQACAAEAAAAlAAMAAQACAAEAAAAlAAQAAQACAAEAAAAlAAUAAQACAAEAAAAlAAYAAQACAAEAAAAlAAcAAQACAAEAAAAlAAgAAQACAAEAAAAlAAkAAQACAAEAAAAlAAoAAQACAAEAAAAlAAsAAQACAAEAAAAlAAwAAQACAAEAAAAlAA0AAQACAAEAAAAlAA4AAQACAAEAAAAlAA8AAQACAAEAAAAlABAAAQACAAEAAAAlABEAAQACAAEAAAAlABIAAQACAAEAAAAlABMAAQACAAEAAAAlABQAAQACAAEAAAAlABUAAQACAAEAAAAlABYAAQACAAEAAAAmAAIAAQACAAEAAAAmAAMAAQACAAEAAAAmAAQAAQACAAEAAAAmAAUAAQACAAEAAAAmAAYAAQACAAEAAAAmAAcAAQACAAEAAAAmAAgAAQACAAEAAAAmAAkAAQACAAEAAAAmAAoAAQACAAEAAAAmAAsAAQACAAEAAAAmAAwAAQACAAEAAAAmAA0AAQACAAEAAAAmAA4AAQACAAEAAAAmAA8AAQACAAEAAAAmABAAAQACAAEAAAAmABEAAQACAAEAAAAmABIAAQACAAEAAAAmABMAAQACAAEAAAAmABQAAQACAAEAAAAmABUAAQACAAEAAAAmABYAAQACAAEAAAAnAAIAAQACAAEAAAAnAAMAAQACAAEAAAAnAAQAAQACAAEAAAAnAAYAAQACAAEAAAAnAAcAAQACAAEAAAAnAAgAAQACAAEAAAAnAAkAAQACAAEAAAAnAAoAAQACAAEAAAAnAAsAAQACAAEAAAAnAAwAAQACAAEAAAAnAA0AAQACAAEAAAAnAA4AAQACAAEAAAAnAA8AAQACAAEAAAAnABAAAQACAAEAAAAnABEAAQACAAEAAAAnABIAAQACAAEAAAAnABMAAQACAAEAAAAnABQAAQACAAEAAAAnABUAAQACAAEAAAAnABYAAQACAAEAAAAAAAEAAQACAAEAAAABAAEAAQACAAEAAAACAAEAAQACAAEAAAADAAEAAQACAAEAAAAEAAEAAQACAAEAAAAFAAEAAQACAAEAAAAGAAEAAQACAAEAAAAHAAEAAQACAAEAAAAIAAEAAQACAAEAAAAJAAEAAQACAAEAAAAKAAEAAQACAAEAAAALAAEAAQACAAEAAAAMAAEAAQACAAEAAAANAAEAAQACAAEAAAAOAAEAAQACAAEAAAAPAAEAAQACAAEAAAAQAAEAAQACAAEAAAARAAEAAQACAAEAAAASAAEAAQACAAEAAAATAAEAAQACAAEAAAAUAAEAAQACAAEAAAAVAAEAAQACAAEAAAAWAAEAAQACAAEAAAAXAAEAAQACAAEAAAAYAAEAAQACAAEAAAAZAAEAAQACAAEAAAAaAAEAAQACAAEAAAAbAAEAAQACAAEAAAAcAAEAAQACAAEAAAAdAAEAAQACAAEAAAAeAAEAAQACAAEAAAAfAAEAAQACAAEAAAAgAAEAAQACAAEAAAAhAAEAAQACAAEAAAAiAAEAAQACAAEAAAAjAAEAAQACAAEAAAAkAAEAAQACAAEAAAAlAAEAAQACAAEAAAAmAAEAAQACAAEAAAAnAAEAAQACAAEAAAAAAAAAAQACAAEAAAABAAAAAQACAAEAAAACAAAAAQACAAEAAAADAAAAAQACAAEAAAAEAAAAAQACAAEAAAAFAAAAAQACAAEAAAAGAAAAAQACAAEAAAAHAAAAAQACAAEAAAAIAAAAAQACAAEAAAAJAAAAAQACAAEAAAAKAAAAAQACAAEAAAALAAAAAQACAAEAAAAMAAAAAQACAAEAAAANAAAAAQACAAEAAAAOAAAAAQACAAEAAAAPAAAAAQACAAEAAAAQAAAAAQACAAEAAAARAAAAAQACAAEAAAASAAAAAQACAAEAAAATAAAAAQACAAEAAAAUAAAAAQACAAEAAAAVAAAAAQACAAEAAAAWAAAAAQACAAEAAAAXAAAAAQACAAEAAAAYAAAAAQACAAEAAAAZAAAAAQACAAEAAAAaAAAAAQACAAEAAAAbAAAAAQACAAEAAAAcAAAAAQACAAEAAAAdAAAAAQACAAEAAAAeAAAAAQACAAEAAAAfAAAAAQACAAEAAAAgAAAAAQACAAEAAAAhAAAAAQACAAEAAAAiAAAAAQACAAEAAAAjAAAAAQACAAEAAAAkAAAAAQACAAEAAAAlAAAAAQACAAEAAAAmAAAAAQACAAEAAAAnAAAAAQACAAEAAAAnAAUAAQACAAEAAAAAAAMAAQACAAEAAAABAAMAAQACAAEAAAACAAMAAQACAAEAAAADAAMAAQACAAEAAAAEAAMAAQACAAEAAAAFAAMAAQACAAEAAAAGAAMAAQACAAEAAAAHAAMAAQACAAEAAAAIAAMAAQACAAEAAAA=")
tile_set = ExtResource("2_khmxq")

[node name="Vignette" parent="." instance=ExtResource("3_kn6jf")]
layer = 3

[node name="TimeLine" type="ColorRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(5, 60)
offset_left = 5.0
offset_top = 105.0
offset_right = 636.0
offset_bottom = 165.0
color = Color(0.247059, 0.14902, 0.192157, 1)

[node name="TimeLineContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 39.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="TimeLineContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ScrollContainer" type="ScrollContainer" parent="TimeLineContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_is506")
vertical_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="TimeLineContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 4

[node name="MapSelectGridContainer" type="GridContainer" parent="TimeLineContainer/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 12
columns = 32

[node name="MapSelectCard" parent="TimeLineContainer/VBoxContainer/ScrollContainer/MarginContainer/MapSelectGridContainer" instance=ExtResource("5_1t86l")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MapSelectCard2" parent="TimeLineContainer/VBoxContainer/ScrollContainer/MarginContainer/MapSelectGridContainer" instance=ExtResource("5_1t86l")]
modulate = Color(0.5, 0.5, 0.5, 1)
layout_mode = 2

[node name="MapSelectCard3" parent="TimeLineContainer/VBoxContainer/ScrollContainer/MarginContainer/MapSelectGridContainer" instance=ExtResource("5_1t86l")]
modulate = Color(0.5, 0.5, 0.5, 1)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.0
offset_top = 63.0
offset_right = 322.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BackButton" parent="MarginContainer/HBoxContainer" instance=ExtResource("6_ae2ug")]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 28)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "BACK_BUTTON"

[node name="CurrentMapVboxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="MapTitleLabel" type="Label" parent="MarginContainer/HBoxContainer/CurrentMapVboxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 21
text = "The Courtyard"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MapDescriptionLabel" type="Label" parent="MarginContainer/HBoxContainer/CurrentMapVboxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 8
text = "This is the lore of the card in question. "
horizontal_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" parent="MarginContainer/HBoxContainer" instance=ExtResource("6_ae2ug")]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 28)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "CONTINUE_BUTTON"
